assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap');

:root {
    --header-font: "Fraunces", serif;
    --body-font: "Afacad Flux", system-ui;
}

h1,
h2,
h3 {
    font-family: var(--header-font);
}

p {
    font-family: "Afacad Flux", sans-serif;
    font-size: 20px;
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

#hero-outer {
    height: 470px;
    width: 1280px;

    position: relative;
}

#hero-image {
    width: 100%;
    height: 470px;
    background: url(images/pexels-ono-kosuki-5974404.jpg) no-repeat center center;
    overflow: hidden;

}

#course {
    padding: 20px 20px 20px 20px;
    margin: auto;
}

#cover-text {
    font-size: 120%;
    font-family: var(--header-font);
    /* width:300px;
    height:200px; */
    padding: 200px 5% 200px 5%;
    width: 300px;
    height: 470px;
    margin: auto;

    position: absolute;
    color: #FFE8C8;
    background-color: rgba(81, 59, 46, 0.5);
    text-align: center;
    /* top:300px;
    left: 200px; */
    animation: mymove 2s ease-out;
    /* border-radius: 25px; */
    top: 100px;
    left: 15%;
}

@keyframes mymove {
    from {
        left: 0px;
    }

    to {
        left: 15%;
    }
}

#cover-text:hover {
    background-color: rgba(81, 59, 46, 0.7);
}

#available-courses {
    color: #513B2E;
    padding: 10px;
    text-align: center;

}

.logo {
    max-height: 100px;
}

.navbar {
    max-height: 100px;
}

#navbar-banner {
    background-color: #FFE8C8;
    font-family: var(--body-font);
    font-size: medium;
}

.nav-item {
    color: #573F35;
}

.card-deck {
    display: flex;
    flex-wrap: wrap;
    align-items: stretch;
}

.selected {
    background-color: rgba(180, 151, 119, 0.3);
}

/*#available-courses .card {
    flex: 1 0 auto;
  }
  
.row {
    text-align:center;
    color:#573F35;
   font-family: var(--body-font);
}*/
.card {
    min-height: 100%;

}

.card-body {
    background-color: rgba(81, 59, 46, 0.1);
    font-family: var(--body-font);
    color: #573F35;



}

.card-img-top {
    mask-image: linear-gradient(black, transparent);
    transition-duration: 5s;
    transition-delay: 2s;
    transition-property: mask-image;
    height: 250px;
}

.card-img-top:hover,
card-img-top:focus {
    mask-image: unset;

}

.btn-outline-secondary {
    color: #573F35;
    border-color: #513B2E;
}

.btn-outline-secondary:hover {
    background-color: #513B2E;
    color: white;
}

.testimonial-space {
    max-width: 33%;
}

.carousel-inner {
    max-width: 50%;
    text-align: center;
    margin: auto;
    padding: 100px;
}

.carousel-inner h4 {

    color: #513B2E;
}

.carousel-inner p {
    color: #573F35;
}

footer {
    background-color: #473c38;
    padding: 20px;
    color: #FFE8C8;
    bottom: 0;
    margin-top: auto;
}

footer li {
    list-style-type: none;
}

footer i {
    font-size: 100%;
    padding: 5px;
    color: #FFE8C8;
}

footer .row {
    color: #FFE8C8;
}

.social {
    color: #FFE8C8;
}

/* gallery page css */
.gallery {
    background-color: rgba(180, 151, 119, 0.3);
}

#gallery-about {
    max-height: 350px;
    max-width: 100%;
    overflow: hidden;
    background-color: #B49777;
}

#gallery-about .card-body {
    height: 100%;
    text-align: center;
    padding: 8.5%;
}

#gallery-about img {
    height: 100%;
    object-fit: cover;
    width: 100%;

}

.col-lg-3.col-md-6.col-sm-12 {
    padding: 0;
    max-height: 50%;
    height: 400px;
}

#pictures .card {
    max-width: 100%;
    height: 400px;

}

#pictures img {
    height: 400px;
    width: 100%;

}

#pictures .card {
    border-radius: 0%;

}

#pictures .card-text {
    color: white;
    background-color: rgba(81, 59, 46, 0.7);
    animation: showtext 2s ease-in;
    padding: 10px 0 0 10px;
    bottom: 0;
    right: 0;
}

/* visibility: hidden; 
}
.card-text.position-absolute.bottom-0:hover {
    visibility: visible;
}
@keyframes showtext {
    from {visibility: hidden;}
  to {visibility: visible;}
  } */

/* styles for the workshop page */
#course-header {
    text-align: center;
    padding: 20px;
    background-color: rgba(180, 151, 119, 0.3);
}

#course {
    text-align: center;
    color: #473c38;
    padding: 20px;
}

#diamond-course {
    text-align: center;
    color: #473c38;
}

.workshop .card {
    --bs-card-border-color: unset;
    --bs-card-inner-border-radius: unset;
    padding-bottom: 10%;
}

.workshop ul {
    height: 122px;
}

.list-group-item {
    background-color: #513B2E;
    color: white;
}

.style-2 {
    background-color: #573F35;
    color: white;
}

.workshop .card-img-top {
    mask-image: none;

}

.workshop .card {
    min-height: 40rem;
    height: fit-content;
    max-height: 40rem;
}

/* styles for the sign up page */

#signup {
    background-image: url(../assets/images/andrej-lisakov-9DRYbaWevgk-unsplash.jpg);
}

form {
    background-color: rgba(81, 59, 46, 0.8);
    color: #FFE8C8;
    font-family: var(--body-font);
    width: 50%;
    position: relative;
    top: 25%;
    left: 20%;
    padding: 5% 10% 5% 10%;
    margin: 20px;
}

textarea {
    width: 80%;
}

#personalinfo {
    display: grid;
}

#personalinfo input {
    width: 80%;
}

.enquire {
    color: #FFE8C8;
    background-color: #513B2E;
}

.enquire:hover {
    background-color: #FFE8C8;
    color: #513B2E;
}

input[type=submit] {
    border-radius: 5px;
    border-color: #573F35;
}

/*styles for confirmation page */

#confirm {
    background-color: rgba(81, 59, 46, 0.8);
    color: #FFE8C8;
    width: 50%;
    padding: 5% 10% 5% 10%;
    margin: 200px auto;
}

/* media queries below */
@media only screen and (min-width:1100px) {
    #hero-image {
        background: url(images/pexels-ono-kosuki-5974404\ large.jpg) no repeat center center;
    }
}

@media only screen and (max-width: 992px) {
    .row-cols-2 {
        padding-left: unset;
        margin-left: unset;
    }
}

@media only screen and (max-width: 800px) {
    #navbar-banner {
        font-size: 2.5vh;
        text-align: justify;
    }

    .row-cols-3>* {
        width: 33.33%;
    }

    .col-6 {
        max-width: 100%;
    }

    #pictures {
        background-color: #B49777;
    }

    #pictures img {
        height: 400px;
        width: 100%;
    }

    @media only screen and (min-width:1100px) {
        .workshop .container {
            max-width: 100%;
        }

        .row-cols-2 {
            padding-left: 100px;
        }
    }

    @media only screen and (max-width: 576px) {
        .logo {
            object-fit: cover;
            max-width: 75px;
        }
    }

    .navbar {
        max-height: 200px;
    }

    #cover-text {
        max-width: 100vw;

        left: 0%;
        width: 100%;
    }

    @keyframes mymove {
        from {
            left: -100px;
        }

        to {
            left: 0px;
        }
    }

    .card {
        max-width: 100vw;
        display: block;
    }

    .navbar>.container {
        position: relative;
    }

    .navbar-expand-sm .navbar-nav {
        font-size: 3vh;
        font-size: 3vh;
        position: absolute;
        top: 20%;
        left: 25%;
    }

    .container,
    .container-fluid,
    .container-lg,
    .container-md,
    .container-sm,
    .container-xl,
    .container-xxl {
        --bs-gutter-x: 0;
    }

    .navbar-expand-sm .navbar-nav {
        flex-direction: row;
        text-align: center;
        font-size: 2vh;

    }

    .navbar-nav li {
        padding: 10px;
    }

    #cover-text {
        margin: unset;
    }

    footer {
        display: inline;
    }

    footer .logo {
        height: 75px;

    }

    #contact .row {
        display: block;

    }

    .picture-col {
        width: 100%;
    }

    .col-6 {
        max-width: 100%;
        width: 100%;
    }

    .carousel-inner {
        max-width: 100%;
    }

    #gallery-about .card-body {
        /* padding: 0; */
    }

    #pictures .card {
        max-width: 100%;
        height: 600px;
    }

    #pictures img {
        height: 100%;
        object-fit: cover;
        top: left;
        top: 0;
        position: absolute;
        left: 0;
        width: 100%;
    }

    #contact .row-cols-3 {
        width: unset;
    }

    #carouselexampleautoplaying {
        padding-left: 0px;
        padding-right: 150px;
    }

    form {
        width: 100%;
        left: 0;
        margin: 0;
    }
}
}

